[gd_scene load_steps=20 format=3 uid="uid://bm2rfoidlbcy5"]

[ext_resource type="Script" path="res://ball.gd" id="1_0mblk"]
[ext_resource type="Texture2D" uid="uid://br6v7wnevcqrl" path="res://groundNewer.png" id="1_jh8nu"]
[ext_resource type="Script" path="res://paddle.gd" id="2_wuk6p"]
[ext_resource type="Texture2D" uid="uid://dhaxi71ihcwrt" path="res://bee.png" id="3_8i8hi"]
[ext_resource type="PackedScene" uid="uid://bjwxb2ggke7m8" path="res://brick.tscn" id="3_an8a2"]
[ext_resource type="PackedScene" uid="uid://y00fd20c83ir" path="res://slow_mo.tscn" id="4_peq5o"]
[ext_resource type="Texture2D" uid="uid://buw2py7m1v8rx" path="res://paddle.png" id="5_drdj7"]
[ext_resource type="Texture2D" uid="uid://de83ffutdxw5a" path="res://rightWall.png" id="5_ykmfi"]
[ext_resource type="Texture2D" uid="uid://jg0w5qdggnbi" path="res://leftWall.png" id="6_5i6rb"]
[ext_resource type="Texture2D" uid="uid://ck1nc615p5xx5" path="res://topWall.png" id="7_d8xam"]
[ext_resource type="FontFile" uid="uid://u7wg463joq30" path="res://Shantell Sans Bouncy Medium.ttf" id="10_ek41b"]
[ext_resource type="Texture2D" uid="uid://dox3ju80t4txt" path="res://rabbit.png" id="12_5j1a6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_12wee"]
radius = 21.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jg2bk"]
size = Vector2(177, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_see4q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdsd6"]
size = Vector2(19.1908, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgrkm"]
size = Vector2(1150, 61)

[sub_resource type="GDScript" id="GDScript_w2r47"]
script/source = "extends CharacterBody2D

@export var speed: float = 0
var forward = Vector2(-1,0) ##.normalized()
var stopTimer: int = 5
var moveTimer: int = 5
var bunnyMoving: bool = false
var bunnyEntered: bool = false
var timer: int = 0

var rng = RandomNumberGenerator.new()
var timeOfEntry = rng.randf_range(0,1)



func _physics_process(delta: float) -> void:
	timer += delta
	##check for entry
	if timer == timeOfEntry:
		bunnyEntered = true
	if bunnyEntered == true:
		if bunnyMoving: ## true
			if stopTimer > 0:
				speed = 0
				stopTimer -= 1 
			else:
				stopTimer = 300
				bunnyMoving = true 
		else: ## false
			if moveTimer > 0:
				speed = 150
				moveTimer -= 1
			else:
				moveTimer = 300
				bunnyMoving = false
	var collision: KinematicCollision2D = move_and_collide(forward * speed * delta)
	if collision:
		if collision.get_collider().is_in_group(\"bricks\"):
			pass
			## change to dead plant
"

[sub_resource type="CircleShape2D" id="CircleShape2D_bw4vw"]

[node name="main" type="Node2D"]
position = Vector2(0, 5)

[node name="ground" type="Sprite2D" parent="."]
position = Vector2(576, 325)
scale = Vector2(0.203384, 0.203384)
texture = ExtResource("1_jh8nu")

[node name="ball" type="CharacterBody2D" parent="." node_paths=PackedStringArray("score_label", "start_text")]
position = Vector2(863, 422)
motion_mode = 1
script = ExtResource("1_0mblk")
score_label = NodePath("../score")
start_text = NodePath("../startText")

[node name="Sprite2D" type="Sprite2D" parent="ball"]
position = Vector2(0, 0.737)
scale = Vector2(0.146094, 0.146094)
texture = ExtResource("3_8i8hi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
position = Vector2(0, 2.00001)
shape = SubResource("CircleShape2D_12wee")

[node name="slowMo" type="Timer" parent="ball"]
wait_time = 5.0
one_shot = true

[node name="paddle" type="CharacterBody2D" parent="." groups=["paddle"]]
position = Vector2(975, 514)
motion_mode = 1
script = ExtResource("2_wuk6p")

[node name="Sprite2D" type="Sprite2D" parent="paddle"]
position = Vector2(-21, 85.5)
scale = Vector2(0.1481, 0.196873)
texture = ExtResource("5_drdj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="paddle"]
position = Vector2(-21, 86)
shape = SubResource("RectangleShape2D_jg2bk")

[node name="leftWall" type="StaticBody2D" parent="."]
position = Vector2(-12, 318)
scale = Vector2(-1.18275, 32.4652)

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWall"]
position = Vector2(-21.1372, 0.0308022)
scale = Vector2(1.39406, 0.98815)
shape = SubResource("RectangleShape2D_see4q")

[node name="Sprite2D" type="Sprite2D" parent="leftWall"]
position = Vector2(-25.3646, -0.27722)
scale = Vector2(0.21912, 0.00614059)
texture = ExtResource("5_ykmfi")

[node name="rightWall" type="StaticBody2D" parent="."]
position = Vector2(1166, 313)
scale = Vector2(1.37858, 33.3886)

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightWall"]
position = Vector2(-24.6631, 0)
scale = Vector2(0.686327, 1.00197)
shape = SubResource("RectangleShape2D_see4q")

[node name="Sprite2D" type="Sprite2D" parent="rightWall"]
position = Vector2(-22.4869, 0.269553)
scale = Vector2(-0.181257, 0.00597116)
texture = ExtResource("6_5i6rb")

[node name="topWall" type="StaticBody2D" parent="."]
position = Vector2(550, -17)
scale = Vector2(60.9304, 1.13474)

[node name="CollisionShape2D" type="CollisionShape2D" parent="topWall"]
position = Vector2(0.443129, 28.2003)
scale = Vector2(1.00681, 0.546073)
shape = SubResource("RectangleShape2D_cdsd6")

[node name="Sprite2D" type="Sprite2D" parent="topWall"]
position = Vector2(0.328243, 23.794)
scale = Vector2(0.00269334, 0.205841)
texture = ExtResource("7_d8xam")

[node name="brick" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(904, 170)

[node name="brick5" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(762, 408)

[node name="brick26" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(426, 172)

[node name="brick27" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(358, 117)

[node name="brick28" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(491, 90)

[node name="brick12" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(377, 244)

[node name="brick13" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(423, 306)

[node name="brick14" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(359, 431)

[node name="brick15" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(456, 400)

[node name="brick16" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(480, 217)

[node name="brick17" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(537, 176)

[node name="brick18" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(615, 116)

[node name="brick19" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(595, 192)

[node name="brick20" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(601, 293)

[node name="brick21" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(534, 268)

[node name="brick22" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(898, 329)

[node name="brick23" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(660, 200)

[node name="brick24" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(707, 117)

[node name="brick25" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(815, 128)

[node name="brick6" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(513, 365)

[node name="brick7" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(796, 234)

[node name="brick8" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(729, 250)

[node name="brick9" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(667, 278)

[node name="brick10" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(654, 364)

[node name="brick11" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(575, 384)

[node name="brick2" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(290, 317)

[node name="brick3" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(713, 339)

[node name="brick4" parent="." instance=ExtResource("3_an8a2")]
position = Vector2(245, 172)

[node name="score" type="RichTextLabel" parent="."]
offset_left = 44.0
offset_top = 41.0
offset_right = 442.0
offset_bottom = 234.0
scale = Vector2(0.72092, 0.72092)
theme_override_fonts/normal_font = ExtResource("10_ek41b")
theme_override_font_sizes/normal_font_size = 40
text = "grow your garden!
"

[node name="startText" type="RichTextLabel" parent="."]
offset_left = 125.0
offset_top = 539.0
offset_right = 1036.0
offset_bottom = 619.0
theme_override_fonts/normal_font = ExtResource("10_ek41b")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center](click to start!)[/center]"

[node name="gameOver" type="StaticBody2D" parent="." groups=["gameOver"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="gameOver"]
position = Vector2(576, 680.5)
shape = SubResource("RectangleShape2D_dgrkm")

[node name="fastMo" parent="." instance=ExtResource("4_peq5o")]
position = Vector2(431, 69)

[node name="bunny" type="CharacterBody2D" parent="."]
position = Vector2(1037, 412)
scale = Vector2(0.717475, 0.717475)
motion_mode = 1
script = SubResource("GDScript_w2r47")

[node name="Sprite2D" type="Sprite2D" parent="bunny"]
scale = Vector2(0.141946, 0.141946)
texture = ExtResource("12_5j1a6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bunny"]
position = Vector2(-7, 0.999999)
rotation = 0.174533
scale = Vector2(2.30787, 3.72063)
shape = SubResource("CircleShape2D_bw4vw")

[connection signal="timeout" from="ball/slowMo" to="ball" method="_on_slow_mo_timeout"]
